--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>COS 597G: Understanding Large Language Models</title>
+    <title>COS 597R: Understanding Large Language Models</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
@@ -78,15 +78,6 @@
         </p>
 
         <p><b>Prerequisites:</b> COS484 or equivalent background (i.e., familiarity with fundamentals of deep learning/machine learning, Transformers, PyTorch). Open to all graduate students. Undergraduates need instructors' permission.</p>
-
-
-       <h3><b>Learning goals:</b></h3>
-          <ul>
-              <li>This course is intended to prepare you for performing cutting-edge research in natural language processing, especially topics related to pre-trained language models. We will discuss the state-of-the-art, their capabilities and limitations. </li>
-              <li>Practice your research skills, including reading research papers, conducting literature survey, oral presentations, as well as providing constructive feedback.</li>
-              <li>Gain hands-on experience through the final project, from brainstorming ideas to implementation and empirical evaluation and writing the final paper. </li>
-          </ul>
-
 
       <h3><b>Course structure</b></h3>
       <ul>
