--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </tbody>
         </table>
 
-        <p><b>We will use a Slack team for most communications this semester. You will be added to the Slack team after the first week. If you join the class late, just email us, and we’ll add you. Once you’re on Slack, we prefer Slack messages over emails for all logistical questions. We also encourage students to use Slack for discussions related to lecture content and projects.</b><br></p>
+        <p><b>We will use a Slack team for most communications this semester. You will be added to the Slack team after the first week. If you join the class late, just email us, and we'll add you. Once you're on Slack, we prefer Slack messages over emails for all logistical questions. We also encourage students to use Slack for discussions related to lecture content and projects.</b><br></p>
 
         <p>Large language models (LLMs) have revolutionized natural language processing by enabling machines to generate, understand, and interact with human language in more sophisticated ways than ever before. Beyond technical advancements, LLMs are shaping societal interactions with technology, from enhancing accessibility for underserved communities to transforming education, healthcare, and creative industries. This course aims to provide a rigorous survey of current LLM research, including model architecture, data preparation, pre-training, post-training, alignment, and model deployment. The course focuses on conceptual understanding and research rather than engineering, and it is expected to be highly interactive.  Students are expected to read cutting-edge research papers regularly, participate in class discussion, and also complete a major project (in groups of 2-3) at the end, for which computational resources will be arranged. 
         </p>
@@ -83,15 +83,17 @@
       <ul>
           <li><b>Class participation (30%)</b>: In each class, we will cover 1-2 papers (see "required reading" in the schedule). You are required to read these papers in depth beforehand, and answer a pre-lecture question form before the class (there is a Google form linked in the schedule). These are due at <b>11:59pm on the day before the lecture</b>. Some questions are designed to test your understanding of the reading materials, and some questions are open-ended and prompt you to read the paper critically and write down your thoughts. This counts towards class participation - we will not grade the correctness but we will expect you to do the work, and submit reasonable answers. 
           </li>
-          <li><b>Panel discussion (15%)</b>: We will schedule 12 panel discussions in the class from Week 4 to Week 9, with each panel consisting of 5 students and lasting 30 minutes (the lectures will be reduced to 50 minutes). Each panel will focus on one research paper related to the lecture topic of that day, and will comprise of the following structure: 
+          <li><b>Debate (15%)</b>: We will schedule 12 debate panels in the class from Week 4 to Week 9, with each panel consisting of 5 students and lasting 30 minutes (the lectures will be reduced to 50 minutes). Each panel will focus on one research paper (or two) related to the lecture topic of that day, and will comprise of the following structure: 
             <ul>
-                <li>Each panel will be composed of 1 moderator, 2 reviewers, and 2 defenders.</li>
-                <li>The moderator will start with a short presentation (8 minutes) of the paper.</li>
-                <li>The 2 defenders will argue in favor of the paper, explaining why they believe the problem can be solved and suggesting possible follow-up work.</li>
+                <li>Each panel will be composed of 1 presenter, 2 critics, and 2 proponents.</li>
+                <li>The presenter will start with a short presentation (8 minutes) of the paper.</li>
+                <li>The 2 critics will then critique the paper, similar to how reviewers assess conference papers—highlighting limitations, weaknesses, and any claims that are not well supported by the experiments.</li>
+                <li>The 2 proponents will explain why they believe the problem does not exist or is not serious.</li>
                 <li>There will be multiple rounds of interaction. Reviewers are asked to send their major criticisms to the defenders at least 2 days before the lecture day, so the defenders have time to research and prepare their responses.</li>
+                <li><b>The group will write a 2-page summary of the debate later and submit it.</b></li>
             </ul>
           Reviewers are asked to send their major criticisms to the defenders at least 2 days before the lecture day, so the defenders have time to research and prepare their responses. We will send out the paper list and sign-up form for the panels by the end of Week 2. </li>
-          <li><b>Lecture scribing (10%)</b>: For each lecture, we will ask 3 students to scribe the lecture content, covering the technical content, research questions, and panel discussion.</li>
+          <li><b>Lecture scribing (10%)</b>: For each lecture, we will ask 3 students to scribe the lecture content, covering the technical content and research questions.</li>
           <li><b>Final project (35% + 10% for presentations)</b>: At the end of the semester, everyone is required to do a class project related to modern LLMs and submit a final paper. You should work as a <b>team of 2 or 3</b>. Everyone is required to submit a proposal by <b>Oct 7th 11:59pm</b>, and the final paper on the Dean's Date (<b>Dec 13th 11:59 pm</b>). In-class project presentations will be scheduled in the last three lectures.
           </li><br>
       </ul>
@@ -177,7 +179,7 @@
 <tr><td>Sep 18 (Wed)</td>
   <td>Sanjeev</td>
   <td>
-  Emergent properties
+  Emergent behavior
   </td>
   <td>
   </td>
