--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <li>There will be multiple rounds of interaction. critics are asked to send their major criticisms to the proponents at least 2 days before the lecture day, so the proponents have time to research and prepare their responses.</li>
                 <li><b>The group will write a 2-page summary of the debate later and submit it.</b></li>
             </ul>
-          critics are asked to send their major criticisms to the proponents at least 2 days before the lecture day, so the proponents have time to research and prepare their responses. We will send out the paper list and sign-up form for the panels by the end of Week 2. </li>
+          Critics are asked to send their major criticisms to the proponents at least 2 days before the lecture day, so the proponents have time to research and prepare their responses. We will send out the paper list and sign-up form for the panels by the end of Week 2. </li>
           <li><b>Lecture scribing (10%)</b>: For each lecture, we will ask 3 students to scribe the lecture content, covering the technical content and research questions.</li>
           <li><b>Final project (35% + 10% for presentations)</b>: At the end of the semester, everyone is required to do a class project related to modern LLMs and submit a final paper. You should work as a <b>team of 2 or 3</b>. Everyone is required to submit a proposal by <b>Oct 7th 11:59pm</b>, and the final paper on the Dean's Date (<b>Dec 13th 11:59 pm</b>). In-class project presentations will be scheduled in the last three lectures.
           </li><br>
