--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <ul>
                 <li>Each panel will be composed of 1 presenter, 2 critics, and 2 proponents.</li>
                 <li>The presenter will start with a short presentation (8 minutes) of the paper.</li>
-                <li>The 2 critics will then critique the paper, similar to how critics assess conference papers—highlighting limitations, weaknesses, and any claims that are not well supported by the experiments.</li>
+                <li>The 2 critics will then critique the paper, similar to how reviewers assess conference papers—highlighting limitations, weaknesses, and any claims that are not well supported by the experiments.</li>
                 <li>The 2 proponents will explain why they believe the problem does not exist or is not serious.</li>
                 <li>There will be multiple rounds of interaction. critics are asked to send their major criticisms to the proponents at least 2 days before the lecture day, so the proponents have time to research and prepare their responses.</li>
                 <li><b>The group will write a 2-page summary of the debate later and submit it.</b></li>
