add zoom link + note about auditing remotely

--- a/index.html
+++ b/index.html
@@ -69,10 +69,14 @@
         <tr>
         <td>Feedback form</td><td><a href="https://forms.gle/vUD1RieC1YcBSugw7">https://forms.gle/vUD1RieC1YcBSugw7</a></td>
         <tr>
+        <td>Zoom Link (Princeton only)</td><td><a href="https://princeton.zoom.us/j/95623350286">https://princeton.zoom.us/j/95623350286</a></td>
+        <tr>
         </tbody>
         </table>
 
         <p><b>We will use a Slack team for most communications this semester. You will be added to the Slack team after the first week. If you join the class late, just email us, and we'll add you. Once you're on Slack, we prefer Slack messages over emails for all logistical questions. We also encourage students to use Slack for discussions related to lecture content and projects.</b><br></p>
+
+        <p><b>For those of you on the waitlist, unfortunately the classroom is at maximum capacity already, and thus you will not be able to audit in-person. We are currently working with the department to potentially get a larger room. Until then, please use the above zoom link which will live-stream the first few lectures.</b><br></p>
 
         <p>Large language models (LLMs) have revolutionized natural language processing by enabling machines to generate, understand, and interact with human language in more sophisticated ways than ever before. Beyond technical advancements, LLMs are shaping societal interactions with technology, from enhancing accessibility for underserved communities to transforming education, healthcare, and creative industries. This course aims to provide a rigorous survey of current LLM research, including model architecture, data preparation, pre-training, post-training, alignment, and model deployment. The course focuses on conceptual understanding and research rather than engineering, and it is expected to be highly interactive.  Students are expected to read cutting-edge research papers regularly, participate in class discussion, and also complete a major project (in groups of 2-3) at the end, for which computational resources will be arranged. 
         </p>
