--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <th>Date</th>
           <th>Instructor</th>
           <th class="topic-column">Topic/required reading</th>
-          <th class="recommended-column">Optional reading</th>
+          <th class="recommended-column">Recommended reading</th>
           <th>Pre-lecture questions</th>
           <th>Panel discussion</th>
           <th>Scribes</th>
@@ -136,10 +136,18 @@
         <td>
         Pretraining 1<br>
         <ul>
-                <li> <a href="https://arxiv.org/abs/2005.14165">The GPT-3 paper </a></li>
+                <li> <a href="https://arxiv.org/abs/2005.14165">
+Language Models are Few-Shot Learners</a> (GPT-3)</li>
         </ul>
         </td>
-        <td></td>
+        <td>
+          <ul>
+                <li> <a href="https://arxiv.org/abs/1706.03762">
+Attention is All You Need</a> (Transformers)</li>
+<li><a href="https://d4mucfpksywv.cloudfront.net/better-language-models/language_models_are_unsupervised_multitask_learners.pdf">Language Models are Unsupervised Multitask Learners</a> (GPT-2)</li>
+<li><a href="https://arxiv.org/abs/1810.04805">BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding</a> (BERT)</li>
+        </ul>
+        </td>
         <td></td>
         <td>N/A</td>
         <td>3 students</td>
@@ -150,13 +158,15 @@
         <td>
         Pretraining 2<br>
         <ul>
-                <li> <a href="https://scontent-lga3-1.xx.fbcdn.net/v/t39.2365-6/453304228_1160109801904614_7143520450792086005_n.pdf?_nc_cat=108&ccb=1-7&_nc_sid=3c67a6&_nc_ohc=HbUYp0un48IQ7kNvgEzqYfD&_nc_ht=scontent-lga3-1.xx&oh=00_AYCrwI_OBYxM-FGq_wTr42pWDeD2Z-iqWD0rPTE5b6Zi-A&oe=66DCFFC7">The Llama 3 Herd of Models</a>, Sections 1-3 and 5.1</li>
+                <li> <a href="https://arxiv.org/abs/2407.21783">The Llama 3 Herd of Models</a>, Sections 1-3 and 5.1</li>
         </ul>
         </td>
         <td>
           <ul>
+            <li><a href="https://arxiv.org/abs/2310.06825">Mistral 7B</a></li>
             <li><a href="https://arxiv.org/abs/2402.00838">OLMo: Accelerating the Science of Language Models</a></li>
             <li><a href="https://arxiv.org/abs/2407.10671">Qwen2 Technical Report</a></li>
+            <li><a href="https://arxiv.org/abs/2406.03476">Does your data spark joy? Performance gains from domain upsampling at the end of training</li>
           </ul>
         </td>
         <td></td>
