Update post-training lectures

--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@ Attention is All You Need</a> (Transformers)</li>
   <td>
   Post-training 1<br>
   <ul>
-    <li><a href="https://arxiv.org/abs/2109.01652">Finetuned Language Models Are Zero-Shot Learners</a></li>
+    <li><a href="https://arxiv.org/abs/2210.11416">Scaling Instruction-Finetuned Language Models</a></li>
   </ul>
   </td>
   <td>
     <ul>
-      <li><a href="https://arxiv.org/abs/2306.04751">How Far Can Camels Go? Exploring the State of Instruction Tuning on Open Resources</a></li>
+      <li><a href="https://arxiv.org/abs/2109.01652">Finetuned Language Models Are Zero-Shot Learners</a></li>
       <li><a href="https://arxiv.org/abs/2311.10702">Camels in a Changing Climate: Enhancing LM Adaptation with Tulu 2</a></li>
     </ul>
   </td>
@@ -258,12 +258,15 @@ Attention is All You Need</a> (Transformers)</li>
   <td>
   Post-training 2 <br>
   <ul>
+    <li><a href="https://arxiv.org/abs/2203.02155">Training language models to follow instructions with human feedback</a></li>
     <li><a href="https://arxiv.org/abs/2305.18290">Direct Preference Optimization: Your Language Model is Secretly a Reward Model</a></li>
   </ul>
   </td>
   <td>
     <ul>
-      <li><a href="https://arxiv.org/abs/2203.02155">Training language models to follow instructions with human feedback</a></li>
+      <li><a href="https://arxiv.org/abs/2406.09279">Unpacking DPO and PPO: Disentangling Best Practices for Learning from Preference Feedback</a></li>
+      <li><a href="https://arxiv.org/abs/2404.10719">Is DPO Superior to PPO for LLM Alignment? A Comprehensive Study</a></li>
+      <li> <a href="https://arxiv.org/abs/2407.21783">The Llama 3 Herd of Models</a>, Section 4</li>
       <li><a href="https://arxiv.org/abs/2405.14734">SimPO: Simple Preference Optimization with a Reference-Free Reward</a></li>
     </ul>
   </td>
