add lec1 slides

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <tr><td>Sep 4 (Wed)</td>
         <td>Sanjeev</td>
         <td>
-        Introduction
+        Introduction <a href="lectures/lec01.pdf">[slides]</a>
         </td>
         <td></td>
         <td></td>
