add project and panel assignments

--- a/index.html
+++ b/index.html
@@ -129,301 +129,600 @@
         <td>N/A</td>
         <td></td>
         </tr>
-
 <!-- week 2 -->
-<tr><td>Sep 9 (Mon)</td>
-        <td>Danqi</td>
-        <td>
-        Pretraining 1<br>
-        <ul>
-                <li> <a href="https://arxiv.org/abs/2005.14165">
-Language Models are Few-Shot Learners</a> (GPT-3)</li>
-        </ul>
-        </td>
-        <td>
-          <ul>
-                <li> <a href="https://arxiv.org/abs/1706.03762">
-Attention is All You Need</a> (Transformers)</li>
-<li><a href="https://d4mucfpksywv.cloudfront.net/better-language-models/language_models_are_unsupervised_multitask_learners.pdf">Language Models are Unsupervised Multitask Learners</a> (GPT-2)</li>
-<li><a href="https://arxiv.org/abs/1810.04805">BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding</a> (BERT)</li>
-        </ul>
-        </td>
-        <td></td>
-        <td>N/A</td>
-        <td>3 students</td>
-        </tr>
-
-<tr><td>Sep 11 (Wed)</td>
-        <td>Danqi</td>
-        <td>
-        Pretraining 2<br>
-        <ul>
-                <li> <a href="https://arxiv.org/abs/2407.21783">The Llama 3 Herd of Models</a>, Sections 1-3 and 5.1</li>
-        </ul>
-        </td>
-        <td>
-          <ul>
-            <li><a href="https://arxiv.org/abs/2310.06825">Mistral 7B</a></li>
-            <li><a href="https://arxiv.org/abs/2402.00838">OLMo: Accelerating the Science of Language Models</a></li>
-            <li><a href="https://arxiv.org/abs/2407.10671">Qwen2 Technical Report</a></li>
-            <li><a href="https://arxiv.org/abs/2406.03476">Does your data spark joy? Performance gains from domain upsampling at the end of training</li>
-          </ul>
-        </td>
-        <td></td>
-        <td>N/A</td>
-        <td>3 students</td>
-</tr>
-
-<!-- week 3 -->
-<tr><td>Sep 16 (Mon)</td>
-  <td>Sanjeev</td>
-  <td>
-  Scaling laws<br>
-  <ul>
-          <li> <a href="https://arxiv.org/abs/2203.15556">Training Compute-Optimal Large Language Models</a></li>
-  </ul>
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>N/A</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Sep 18 (Wed)</td>
-  <td>Sanjeev</td>
-  <td>
-  Emergent behavior
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>N/A</td>
-  <td>3 students</td>
-  </tr>
-
-<!-- week 4 -->
-<tr><td>Sep 23 (Mon)</td>
-  <td>Danqi</td>
-  <td>
-  Data preparation 1<br>
-  <ul>
-          <li> <a href="https://arxiv.org/abs/2402.00159">Dolma: an Open Corpus of Three Trillion Tokens for Language Model Pretraining Research</a></li>
-  </ul>
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 1:<br>5 students</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Sep 25 (Wed)</td>
-  <td>Danqi</td>
-  <td>
-  Data preparation 2 <br>
-  <ul>
-    <li><a href="https://arxiv.org/abs/2406.11794">DataComp-LM: In search of the next generation of training sets for language models</a></li>
-  </ul>
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 2:<br>5 students</td>
-  <td>3 students</td>
-  </tr>
-
-<!-- week 5 -->
-<tr><td>Sep 30 (Mon)</td>
-  <td>Danqi</td>
-  <td>
-  Post-training 1<br>
-  <ul>
-    <li><a href="https://arxiv.org/abs/2210.11416">Scaling Instruction-Finetuned Language Models</a></li>
-  </ul>
-  </td>
-  <td>
-    <ul>
-      <li><a href="https://arxiv.org/abs/2109.01652">Finetuned Language Models Are Zero-Shot Learners</a></li>
-      <li><a href="https://arxiv.org/abs/2311.10702">Camels in a Changing Climate: Enhancing LM Adaptation with Tulu 2</a></li>
-    </ul>
-  </td>
-  <td></td>
-  <td>Panel 3:<br>5 students</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Oct 2 (Wed)</td>
-  <td>Danqi</td>
-  <td>
-  Post-training 2 <br>
-  <ul>
-    <li><a href="https://arxiv.org/abs/2203.02155">Training language models to follow instructions with human feedback</a></li>
-    <li><a href="https://arxiv.org/abs/2305.18290">Direct Preference Optimization: Your Language Model is Secretly a Reward Model</a></li>
-  </ul>
-  </td>
-  <td>
-    <ul>
-      <li><a href="https://arxiv.org/abs/2406.09279">Unpacking DPO and PPO: Disentangling Best Practices for Learning from Preference Feedback</a></li>
-      <li><a href="https://arxiv.org/abs/2404.10719">Is DPO Superior to PPO for LLM Alignment? A Comprehensive Study</a></li>
-      <li> <a href="https://arxiv.org/abs/2407.21783">The Llama 3 Herd of Models</a>, Section 4</li>
-      <li><a href="https://arxiv.org/abs/2405.14734">SimPO: Simple Preference Optimization with a Reference-Free Reward</a></li>
-    </ul>
-  </td>
-  <td></td>
-  <td>Panel 4:<br>5 students</td>
-  <td>3 students</td>
-  </tr>
-
-<!-- week 6 -->
-<tr><td>Oct 7 (Mon)</td>
-  <td>Sanjeev</td>
-  <td>
-  Alignment
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 5:<br>5 students</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Oct 9 (Wed)</td>
-  <td>Sanjeev</td>
-  <td>
-  Constitutional AI
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 6:<br>5 students</td>
-  <td>3 students</td>
-  </tr>
-
-<!-- week 7 -->
-<tr><td>Oct 21 (Mon)</td>
-  <td>TBD</td>
-  <td>
-  Evaluation 1
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 7:<br>5 students</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Oct 23 (Wed)</td>
-  <td>TBD</td>
-  <td>
-  Evaluation 2
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 8:<br>5 students</td>
-  <td>3 students</td>
-  </tr>
-
-<!-- week 8 -->
-<tr><td>Oct 28 (Mon)</td>
-  <td>TBD</td>
-  <td>
-  Topic TBD
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 9:<br>5 students</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Oct 30 (Wed)</td>
-  <td>TBD</td>
-  <td>
-  Topic TBD
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 10:<br>5 students</td>
-  <td>3 students</td>
-  </tr>
-
-<!-- week 9 -->
-<tr><td>Nov 4 (Mon)</td>
-  <td>TBD</td>
-  <td>
-  Topic TBD
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 11:<br>5 students</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Nov 6 (Wed)</td>
-  <td>TBD</td>
-  <td>
-  Topic TBD
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>Panel 12:<br>5 students</td>
-  <td>3 students</td>
-  </tr>
-
-<!-- week 10 -->
-<tr><td>Nov 11 (Mon)</td>
-  <td>Guest</td>
-  <td>
-  Guest Lecture #1
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>N/A</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Nov 13 (Wed)</td>
-  <td>Guest</td>
-  <td>
-  Guest Lecture #2
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>N/A</td>
-  <td>3 students</td>
-  </tr>
-
-<!-- week 11 -->
-<tr><td>Nov 18 (Mon)</td>
-  <td>Guest</td>
-  <td>
-  Guest Lecture #3
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>N/A</td>
-  <td>3 students</td>
-</tr>
-
-<tr><td>Nov 20 (Wed)</td>
-  <td>Guest</td>
-  <td>
-  Guest Lecture #4
-  </td>
-  <td>
-  </td>
-  <td></td>
-  <td>N/A</td>
-  <td>3 students</td>
-  </tr>
+<tr>
+    <td>
+     Sep 9 (Mon)
+    </td>
+    <td>
+     Danqi
+    </td>
+    <td>
+     Pretraining 1
+     <br/>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2005.14165">
+        Language Models are Few-Shot Learners
+       </a>
+       (GPT-3)
+      </li>
+     </ul>
+    </td>
+    <td>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/1706.03762">
+        Attention is All You Need
+       </a>
+       (Transformers)
+      </li>
+      <li>
+       <a href="https://d4mucfpksywv.cloudfront.net/better-language-models/language_models_are_unsupervised_multitask_learners.pdf">
+        Language Models are Unsupervised Multitask Learners
+       </a>
+       (GPT-2)
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/1810.04805">
+        BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding
+       </a>
+       (BERT)
+      </li>
+     </ul>
+    </td>
+    <td>
+    </td>
+    <td>
+     N/A
+    </td>
+    <td>
+     <ul><li>Yinghui He</li><li>Haichen Dong</li><li>Brendan Y. Wang</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Sep 11 (Wed)
+    </td>
+    <td>
+     Danqi
+    </td>
+    <td>
+     Pretraining 2
+     <br/>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2407.21783">
+        The Llama 3 Herd of Models
+       </a>
+       , Sections 1-3 and 5.1
+      </li>
+     </ul>
+    </td>
+    <td>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2310.06825">
+        Mistral 7B
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2402.00838">
+        OLMo: Accelerating the Science of Language Models
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2407.10671">
+        Qwen2 Technical Report
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2406.03476">
+        Does your data spark joy? Performance gains from domain upsampling at the end of training
+       </a>
+      </li>
+     </ul>
+    </td>
+    <td>
+    </td>
+    <td>
+     N/A
+    </td>
+    <td>
+     <ul><li>Jiaxin Xiao</li><li>Dillon Lue</li><li>Ziyu Xiong</li></ul>
+    </td>
+   </tr>
+   <!-- week 3 -->
+   <tr>
+    <td>
+     Sep 16 (Mon)
+    </td>
+    <td>
+     Sanjeev
+    </td>
+    <td>
+     Scaling laws
+     <br/>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2203.15556">
+        Training Compute-Optimal Large Language Models
+       </a>
+      </li>
+     </ul>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     N/A
+    </td>
+    <td>
+     <ul><li>Wuwei Zhang</li><li>Simran Kaur</li><li>Keerthana Nallamotu</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Sep 18 (Wed)
+    </td>
+    <td>
+     Sanjeev
+    </td>
+    <td>
+     Emergent behavior
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     N/A
+    </td>
+    <td>
+     <ul><li>Erich Liang</li><li>Heyu Guo</li><li>Benedikt P. Stroebl</li></ul>
+    </td>
+   </tr>
+   <!-- week 4 -->
+   <tr>
+    <td>
+     Sep 23 (Mon)
+    </td>
+    <td>
+     Danqi
+    </td>
+    <td>
+     Data preparation 1
+     <br/>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2402.00159">
+        Dolma: an Open Corpus of Three Trillion Tokens for Language Model Pretraining Research
+       </a>
+      </li>
+     </ul>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Kellen Cheng<br/>
+ Critics: <ul><li>Erich Liang</li><li>Varun Satish</li></ul>
+ Proponents: <ul><li>Simran Kaur</li><li>Tedi Zadouri</li></ul>
+    </td>
+    <td>
+     <ul><li>Sijia Liu</li><li>Iain D. Campbell</li><li>Elizabeth A. Mieczkowski</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Sep 25 (Wed)
+    </td>
+    <td>
+     Danqi
+    </td>
+    <td>
+     Data preparation 2
+     <br/>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2406.11794">
+        DataComp-LM: In search of the next generation of training sets for language models
+       </a>
+      </li>
+     </ul>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Mingqian Xue<br/>
+ Critics: <ul><li>Lekang Yuan</li><li>Heyu Guo</li></ul>
+ Proponents: <ul><li>Qishuo Yin</li><li>Lihan Zha</li></ul>
+    </td>
+    <td>
+     <ul><li>Jane E. Castleman</li><li>Kylie Zhang</li><li>Yingqing Guo</li></ul>
+    </td>
+   </tr>
+   <!-- week 5 -->
+   <tr>
+    <td>
+     Sep 30 (Mon)
+    </td>
+    <td>
+     Danqi
+    </td>
+    <td>
+     Post-training 1
+     <br/>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2210.11416">
+        Scaling Instruction-Finetuned Language Models
+       </a>
+      </li>
+     </ul>
+    </td>
+    <td>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2109.01652">
+        Finetuned Language Models Are Zero-Shot Learners
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2311.10702">
+        Camels in a Changing Climate: Enhancing LM Adaptation with Tulu 2
+       </a>
+      </li>
+     </ul>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Tamjeed Azad<br/>
+ Critics: <ul><li>Elizabeth A. Mieczkowski</li><li>Nimra Nadeem</li></ul>
+ Proponents: <ul><li>Iain D. Campbell</li><li>Junita Sirait</li></ul>
+    </td>
+    <td>
+     <ul><li>Kincaid MacDonald</li><li>Amey P. Pasarkar</li><li>Kathryn L. Wantlin</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Oct 2 (Wed)
+    </td>
+    <td>
+     Danqi
+    </td>
+    <td>
+     Post-training 2
+     <br/>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2203.02155">
+        Training language models to follow instructions with human feedback
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2305.18290">
+        Direct Preference Optimization: Your Language Model is Secretly a Reward Model
+       </a>
+      </li>
+     </ul>
+    </td>
+    <td>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2406.09279">
+        Unpacking DPO and PPO: Disentangling Best Practices for Learning from Preference Feedback
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2404.10719">
+        Is DPO Superior to PPO for LLM Alignment? A Comprehensive Study
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2407.21783">
+        The Llama 3 Herd of Models
+       </a>
+       , Section 4
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2405.14734">
+        SimPO: Simple Preference Optimization with a Reference-Free Reward
+       </a>
+      </li>
+     </ul>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Ahmed Bayoumi<br/>
+ Critics: <ul><li>Tiffany T. Liu</li><li>Zeyu Shen</li></ul>
+ Proponents: <ul><li>Jiaxin Xiao</li><li>Wuwei Zhang</li></ul>
+    </td>
+    <td>
+     <ul><li>Nimra Nadeem</li><li>Stanley Wei</li><li>Veniamin Veselovskyy</li></ul>
+    </td>
+   </tr>
+   <!-- week 6 -->
+   <tr>
+    <td>
+     Oct 7 (Mon)
+    </td>
+    <td>
+     Sanjeev
+    </td>
+    <td>
+     Alignment
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Boyi Wei<br/>
+ Critics: <ul><li>Xingyu Zhu</li><li>Veniamin Veselovskyy</li></ul>
+ Proponents: <ul><li>Benedikt P. Stroebl</li><li>Kincaid MacDonald</li></ul>
+    </td>
+    <td>
+     <ul><li>Juhyun Park</li><li>Gwangho Lee</li><li>Ahmed Bayoumi</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Oct 9 (Wed)
+    </td>
+    <td>
+     Sanjeev
+    </td>
+    <td>
+     Constitutional AI
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Zixuan Wang<br/>
+ Critics: <ul><li>Colin Wang</li><li>Dillon Lue</li></ul>
+ Proponents: <ul><li>Sreemanti Dey</li><li>Jane E. Castleman</li></ul>
+    </td>
+    <td>
+     <ul><li>Wenzhe Li</li><li>Mingqian Xue</li><li>Andre Niyongabo Rubungo</li></ul>
+    </td>
+   </tr>
+   <!-- week 7 -->
+   <tr>
+    <td>
+     Oct 21 (Mon)
+    </td>
+    <td>
+     TBD
+    </td>
+    <td>
+     Evaluation 1
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Arin J. Mukherjee<br/>
+ Critics: <ul><li>Seth Karten</li><li>Cyrus Vachha</li></ul>
+ Proponents: <ul><li>Yuka Shu</li><li>Keerthana Nallamotu</li></ul>
+    </td>
+    <td>
+     <ul><li>Kellen Cheng</li><li>Yijun Yin</li><li>Lihan Zha</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Oct 23 (Wed)
+    </td>
+    <td>
+     TBD
+    </td>
+    <td>
+     Evaluation 2
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Kaiqu Liang<br/>
+ Critics: <ul><li>Andre Niyongabo Rubungo</li><li>Zhicheng Zheng</li></ul>
+ Proponents: <ul><li>Brendan Y. Wang</li><li>David B. Braun</li></ul>
+    </td>
+    <td>
+     <ul><li>Zeyu Shen</li><li>Tedi Zadouri</li><li>Lekang Yuan</li></ul>
+    </td>
+   </tr>
+   <!-- week 8 -->
+   <tr>
+    <td>
+     Oct 28 (Mon)
+    </td>
+    <td>
+     TBD
+    </td>
+    <td>
+     Topic TBD
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Jiayi Zhang<br/>
+ Critics: <ul><li>Catherine Cheng</li><li>Juhyun Park</li></ul>
+ Proponents: <ul><li>Gwangho Lee</li><li>Sijia Liu</li></ul>
+    </td>
+    <td>
+     <ul><li>Tiffany T. Liu</li><li>Zhicheng Zheng</li><li>Zixuan Wang</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Oct 30 (Wed)
+    </td>
+    <td>
+     TBD
+    </td>
+    <td>
+     Topic TBD
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Constantin Schesch<br/>
+ Critics: <ul><li>Yinghui He</li><li>Yijun Yin</li></ul>
+ Proponents: <ul><li>Haichen Dong</li><li>Amey P. Pasarkar</li></ul>
+    </td>
+    <td>
+     <ul><li>Creston A. Brooks</li><li>Jiayi Zhang</li><li>Qishuo Yin</li></ul>
+    </td>
+   </tr>
+   <!-- week 9 -->
+   <tr>
+    <td>
+     Nov 4 (Mon)
+    </td>
+    <td>
+     TBD
+    </td>
+    <td>
+     Topic TBD
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Ziyu Xiong<br/>
+ Critics: <ul><li>Kathryn L. Wantlin</li><li>Creston A. Brooks</li></ul>
+ Proponents: <ul><li>Stanley Wei</li><li>Lucy He</li></ul>
+    </td>
+    <td>
+     <ul><li>David B. Braun</li><li>Boyi Wei</li><li>Arin J. Mukherjee</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Nov 6 (Wed)
+    </td>
+    <td>
+     TBD
+    </td>
+    <td>
+     Topic TBD
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     Presenter: Alexandre Kirchmeyer<br/>
+ Critics: <ul><li>Wenzhe Li</li><li>Kylie Zhang</li></ul>
+ Proponents: <ul><li>Yingqing Guo</li></ul>
+    </td>
+    <td>
+     <ul><li>Sreemanti Dey</li><li>Xingyu Zhu</li><li>Colin Wang</li></ul>
+    </td>
+   </tr>
+   <!-- week 10 -->
+   <tr>
+    <td>
+     Nov 11 (Mon)
+    </td>
+    <td>
+     Guest
+    </td>
+    <td>
+     Guest Lecture #1
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     N/A
+    </td>
+    <td>
+     <ul><li>Alexandre Kirchmeyer</li><li>Lucy He</li><li>Junita Sirait</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Nov 13 (Wed)
+    </td>
+    <td>
+     Guest
+    </td>
+    <td>
+     Guest Lecture #2
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     N/A
+    </td>
+    <td>
+     <ul><li>Cyrus Vachha</li><li>Varun Satish</li><li>Kaiqu Liang</li></ul>
+    </td>
+   </tr>
+   <!-- week 11 -->
+   <tr>
+    <td>
+     Nov 18 (Mon)
+    </td>
+    <td>
+     Guest
+    </td>
+    <td>
+     Guest Lecture #3
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     N/A
+    </td>
+    <td>
+     <ul><li>Tamjeed Azad</li><li>Seth Karten</li><li>Catherine Cheng</li></ul>
+    </td>
+   </tr>
+   <tr>
+    <td>
+     Nov 20 (Wed)
+    </td>
+    <td>
+     Guest
+    </td>
+    <td>
+     Guest Lecture #4
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+     N/A
+    </td>
+    <td>
+     <ul><li>Constantin Schesch</li><li>Yuka Shu</li></ul>
+    </td>
+   </tr>
 
 <!-- week 12 -->
 <tr><td>Nov 25 (Mon)</td>
