--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <th>Instructor</th>
           <th class="topic-column">Topic/required reading</th>
           <th class="recommended-column">Recommended reading</th>
-          <th>Pre-lecture questions</th>
+          <th>Reading response</th>
           <th>Panel discussion</th>
           <th>Scribes</th>
         </tr>
@@ -175,6 +175,7 @@
      </ul>
     </td>
     <td>
+      <a href="https://forms.gle/UpFZZLQQ6WcJQSbA8">[link]</a>
     </td>
     <td>
      N/A
@@ -194,6 +195,10 @@
      Pretraining 2
      <br/>
      <ul>
+      <li><a href="https://arxiv.org/abs/2005.14165">
+        Language Models are Few-Shot Learners
+       </a> (cont'd)
+      </li>
       <li>
        <a href="https://arxiv.org/abs/2407.21783">
         The Llama 3 Herd of Models
