--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
        <a href="https://arxiv.org/abs/2407.21783">
         The Llama 3 Herd of Models
        </a>
-       , Sections 1-3 and 5.1
+       , Sections 1-2, Section 3.1-3.2, 3.4, and 5.1
       </li>
      </ul>
     </td>
