Update lec02, reading form and office hours

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <table class="table table-bordered table-striped">
         <tbody>
         <tr>
-        <td>Instructors</td> <td><a href="https://www.cs.princeton.edu/~arora/">Sanjeev Arora</a> (arora AT cs.princeton.edu) and <a href="https://www.cs.princeton.edu/~danqic/">Danqi Chen</a> (danqic AT cs.princeton.edu)</td>
+        <td>Instructors</td> <a href="https://www.cs.princeton.edu/~danqic/">Danqi Chen</a> (danqic AT cs.princeton.edu) and <td><a href="https://www.cs.princeton.edu/~arora/">Sanjeev Arora</a> (arora AT cs.princeton.edu)</td>
         </tr>
         <tr>
         <td>Teaching assistants</td> <td><a href="https://adithyabh.github.io/">Adithya Bhaskar</a> (adithyab AT princeton.edu) and <a href="https://tylerzhu.com/research/">Tyler Zhu</a> (tylerzhu AT princeton.edu)</td>
@@ -64,7 +64,7 @@
         <td>Location</td> <td><a href="https://classroominfo.princeton.edu/View.aspx?bl_id=0616&fl_id=A&rm_id=0616_A_CC12&bc=FRIEN&img=0616008.JPG&rn=008">Friend Center 008</a></td>
         </tr>
         <tr>
-        <td>Office hours</td> <td>TBD</td>
+        <td>Office hours</td> <td>Danqi's office hour: Tuesday 10-11, COS 412 (<a href="https://calendly.com/danqic/office-hours">by appointment</a>) <br> Sanjeev's office hour: TBA<br> Adithya's office hour: Wednesday 3-4pm, Friend 010C <br>Tyler's office hour: Monday 4-5pm, Friend 010C </td>
         </tr>
         <tr>
         <td>Feedback form</td><td><a href="https://forms.gle/vUD1RieC1YcBSugw7">https://forms.gle/vUD1RieC1YcBSugw7</a></td>
@@ -141,7 +141,7 @@
      Danqi
     </td>
     <td>
-     Pretraining 1
+     Pretraining 1 <a href="lectures/lec02.pdf">[slides]</a>
      <br/>
      <ul>
       <li>
@@ -232,6 +232,7 @@
      </ul>
     </td>
     <td>
+      <a href="https://forms.gle/tWCzZP7E5pRVJ9MQ6">[link]</a>
     </td>
     <td>
      N/A
