--- a/index.html
+++ b/index.html
@@ -172,6 +172,16 @@
        </a>
        (BERT)
       </li>
+      <li>
+        <a href="https://nlp.seas.harvard.edu/annotated-transformer/">
+          The Annotated Transformer (Harvard NLP blog)
+        </a>
+      </li>
+      <li>
+        <a href="https://www.yitay.net/blog/model-architecture-blogpost-encoders-prefixlm-denoising">
+          What happened to BERT & T5? On Transformer Encoders, PrefixLM and Denoising Objectives — Yi Tay
+        </a>
+      </li>
      </ul>
     </td>
     <td>
