--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
         <td>Location</td> <td><a href="https://classroominfo.princeton.edu/View.aspx?bl_id=0616&fl_id=A&rm_id=0616_A_CC12&bc=FRIEN&img=0616008.JPG&rn=008">Friend Center 008</a></td>
         </tr>
         <tr>
-        <td>Office hours</td> <td>TBD</td>
+        <td>Office hours</td> <td><ul> 
+            <li>Sanjeev: TBD. </li>
+            <li>Danqi: Tuesday, 10-11am by appointment (link tbd). </li>
+            <li>Adithya: Wednesday, 3-4pm in Friend 010C. </li>
+            <li>Tyler: Monday, 4-5pm in Friend 010C. </li>
+        </ul> </td>
         </tr>
         <tr>
         <td>Feedback form</td><td><a href="https://forms.gle/vUD1RieC1YcBSugw7">https://forms.gle/vUD1RieC1YcBSugw7</a></td>
