--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <tr>
         <td>Office hours</td> 
         <td>Danqi's office hour: Tuesday 10-11, COS 412 (<a href="https://calendly.com/danqic/office-hours">by appointment</a>) <br> 
-            Sanjeev's office hour: TBA<br> 
+            Sanjeev's office hour: Wednesday 4-5pm, COS 407<br> 
             Adithya's office hour: Wednesday 3-4pm, Friend 010C <br>
             Tyler's office hour: Monday 4-5pm, Friend 010C 
         </td>
@@ -161,30 +161,27 @@
      <ul>
       <li>
        <a href="https://arxiv.org/abs/1706.03762">
-        Attention is All You Need
+        Transformers
        </a>
-       (Transformers)
-      </li>
-      <li>
-       <a href="https://d4mucfpksywv.cloudfront.net/better-language-models/language_models_are_unsupervised_multitask_learners.pdf">
-        Language Models are Unsupervised Multitask Learners
-       </a>
-       (GPT-2)
-      </li>
-      <li>
-       <a href="https://arxiv.org/abs/1810.04805">
-        BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding
-       </a>
-       (BERT)
       </li>
       <li>
         <a href="https://nlp.seas.harvard.edu/annotated-transformer/">
-          The Annotated Transformer (Harvard NLP blog)
+          The Annotated Transformer
         </a>
       </li>
       <li>
+       <a href="https://d4mucfpksywv.cloudfront.net/better-language-models/language_models_are_unsupervised_multitask_learners.pdf">
+        GPT-2
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/1810.04805">
+        BERT
+       </a>
+      </li>
+      <li>
         <a href="https://www.yitay.net/blog/model-architecture-blogpost-encoders-prefixlm-denoising">
-          What happened to BERT & T5? On Transformer Encoders, PrefixLM and Denoising Objectives — Yi Tay
+          What happened to BERT & T5? (Yi Tay)
         </a>
       </li>
      </ul>
