--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <td>Office hours</td> 
         <td>Danqi's office hour: Tuesday 10-11, COS 412 (<a href="https://calendly.com/danqic/office-hours">by appointment</a>) <br> 
             Sanjeev's office hour: Wednesday 4-5pm, COS 407<br> 
-            Adithya's office hour: Wednesday 3-4pm, Friend 010C <br>
+            Adithya's office hour: Thursday 3-4pm, Friend 010B <br>
             Tyler's office hour: Monday 4-5pm, Friend 010C 
         </td>
         </tr>
