--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
      Danqi
     </td>
     <td>
-     Pretraining 2
+     Pretraining 2 <a href="lectures/lec03.pdf">[slides]</a>
      <br/>
      <ul>
       <li><a href="https://arxiv.org/abs/2005.14165">
