--- a/index.html
+++ b/index.html
@@ -270,9 +270,21 @@
         Training Compute-Optimal Large Language Models
        </a>
       </li>
+      <li>
+       <a href="https://arxiv.org/abs/2305.16264">
+        Scaling Data-Constrained Language Models
+       </a>
+      </li>
      </ul>
     </td>
     <td>
+      <ul>
+        <li>
+          <a href="https://arxiv.org/abs/2001.08361">
+            Scaling Laws for Neural Language Models
+          </a>
+        </li>
+      </ul>
     </td>
     <td>
     </td>
