add lec2 scribe notes

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
      N/A
     </td>
     <td>
+      <a href="lectures/lec02_notes.pdf">[scribe notes]</a>
      <ul><li>Yinghui He</li><li>Haichen Dong</li><li>Brendan Y. Wang</li></ul>
     </td>
    </tr>
@@ -344,7 +345,7 @@
     </td>
     <td>
      Presenter: Kellen Cheng<br/>
- Critics: <ul><li>Erich Liang</li><li>Varun Satish</li></ul>
+ Critics: <ul><li>Erich Liang</li><li>Tanvi Namjoshi</li></ul>
  Proponents: <ul><li>Simran Kaur</li><li>Tedi Zadouri</li></ul>
     </td>
     <td>
